комит 10 - Выровнять кнопки и обновить карточки тестов

--- a/src/assets/i18n/kk.json
+++ b/src/assets/i18n/kk.json
@@ -14,6 +14,12 @@
     "CREATING": "Жасалуда...",
     "LOADING": "Жүктелуде..."
   },
+  "CONFIRM": {
+    "DELETE_TITLE": "Жоюды растау",
+    "DELETE_CONFIRM": "Жою",
+    "PUBLISH_TITLE": "Жариялауды растау",
+    "PUBLISH_CONFIRM": "Жариялау"
+  },
   "NAV": {
     "DASHBOARD": "Басты бет",
     "USERS": "Пайдаланушылар",
@@ -32,6 +38,35 @@
     "START_TEST": "Тестті бастау",
     "NO_TESTS": "Қолжетімді тесттер жоқ",
     "NO_TESTS_DESCRIPTION": "Қазір өту үшін жарияланған тесттер жоқ"
+  },
+  "ANALYTICS": {
+    "STUDENT_TITLE": "Менің аналитикам",
+    "STUDENT_SUBTITLE": "Нәтижелерді бақылап, жақсарту бағыттарын анықтаңыз",
+    "LAST_TEST_TITLE": "Тест нәтижелері",
+    "LAST_TEST_LOADING": "Нәтижелер жүктелуде...",
+    "LAST_TEST_EMPTY": "Әзірге бағаланған тест жоқ",
+    "LAST_TEST_EMPTY_HINT": "Тест тапсырып, бағалануын күтіңіз",
+    "SUBJECT_NAME_LABEL": "Пәні:",
+    "TEST_NAME_LABEL": "Тест атауы:",
+    "STRONG_AREAS": "Күшті тұстар",
+    "WEAK_AREAS": "Жақсарту аймақтары",
+    "VIEW_DETAILS": "Толық талдауды көру",
+    "TOPICS_TITLE": "Тақырыптар бойынша нәтиже",
+    "TOPICS_LOADING": "Тақырыптар жүктелуде...",
+    "TOPICS_EMPTY": "Тақырыптар бойынша дерек жоқ",
+    "TOPICS_AXIS": "Тақырыптар",
+    "PERCENTAGE_AXIS": "Пайыз (%)",
+    "TOPICS_HINT": "Бағанды басып, сұрақтар бөлінісін көріңіз",
+    "ATTEMPT_TITLE": "Тест талдауы",
+    "ATTEMPT_SUBTITLE": "Тақырыптар бойынша нәтижелердің толық бөлінісі",
+    "DRILLDOWN_LOADING": "Сұрақтар деректері жүктелуде...",
+    "DRILLDOWN_TITLE": "Сұрақтар талдауы",
+    "DRILLDOWN_EMPTY": "Бұл тақырып бойынша сұрақтар жоқ",
+    "DRILLDOWN_QUESTION_NUMBER": "Сұрақ {{index}}",
+    "DRILLDOWN_QUESTION_LABEL": "Сұрақ",
+    "DRILLDOWN_YOUR_ANSWER": "Сіздің жауабыңыз",
+    "DRILLDOWN_CORRECT_ANSWER": "Дұрыс жауап",
+    "DRILLDOWN_EXPLANATION": "Түсіндірме"
   },
   "AUTH": {
     "LOGIN": "Кіру",
@@ -190,12 +225,17 @@
     "FIELD_DESC_LABEL": "Сипаттама (міндетті емес)",
     "FIELD_DESC_PLACEHOLDER": "Тест сипаттамасын енгізіңіз",
     "FIELD_DESC_ERROR_MAX": "Сипаттама 1000 таңбадан аспауы керек",
+    "FIELD_CLASS_LEVEL_LABEL": "Сынып деңгейі",
+    "FIELD_CLASS_LEVEL_SUFFIX": "сынып",
+    "FIELD_CLASS_LEVEL_LOADING": "Деңгейлер жүктелуде...",
+    "FIELD_CLASS_LEVEL_HINT": "1-қадам: сынып деңгейін таңдаңыз (бұл пәндер мен сыныптарды сүзеді)",
+    "FIELD_CLASS_LEVEL_REQUIRED": "Сынып деңгейі міндетті",
     "FIELD_SUBJECT_LABEL": "Пән",
     "FIELD_SUBJECT_LOADING": "Пәндер жүктелуде...",
-    "FIELD_SUBJECT_HINT_NEW": "1-қадам: тест үшін пәнді таңдаңыз",
+    "FIELD_SUBJECT_HINT_NEW": "2-қадам: тест үшін пәнді таңдаңыз",
     "FIELD_SUBJECT_REQUIRED": "Пән міндетті",
     "FIELD_SCHOOL_CLASSES_LABEL": "Сыныптар",
-    "FIELD_SCHOOL_CLASSES_HINT": "2-қадам: бір немесе бірнеше сыныпты таңдаңыз (мысалы, 9А, 9Б, 9В)",
+    "FIELD_SCHOOL_CLASSES_HINT": "3-қадам: бір немесе бірнеше сыныпты таңдаңыз (мысалы, 9А, 9Б, 9В)",
     "FIELD_SCHOOL_CLASSES_REQUIRED": "Кемінде бір сыныпты таңдау қажет",
     "FIELD_SCHOOL_CLASSES_LOADING": "Сыныптар жүктелуде...",
     "FIELD_DURATION_LABEL": "Ұзақтығы (мин)",
@@ -247,6 +287,7 @@
     "TOOLTIP_PUBLISH": "Тестті жариялау (кейін өңдеу мүмкін емес)",
     "TOOLTIP_DELETE": "Тестті жою",
     "TOOLTIP_DELETE_DISABLED": "Жоюға болмайды — тапсыру әрекеттері бар",
+    "NOTIFY_CLASS_LEVELS_FAIL": "Сынып деңгейлері жүктелмеді",
     "NOTIFY_SCHOOL_CLASSES_FAIL": "Сыныптар жүктелмеді",
     "NOTIFY_SUBJECTS_FAIL": "Пәндер жүктелмеді",
     "NOTIFY_TEST_LOAD_FAIL": "Тест жүктелмеді",
@@ -257,7 +298,8 @@
     "NOTIFY_DELETE_SUCCESS": "Тест жойылды",
     "NOTIFY_DELETE_BLOCK": "Тапсыру әрекеттері бар тестті жоюға болмайды",
     "CONFIRM_PUBLISH": "Тестті жариялайсыз ба? Жарияланғаннан кейін тест құрамын өңдей алмайсыз.",
-    "CONFIRM_DELETE": "Тестті жоясыз ба? Бұл әрекетті болдырмауға болмайды."
+    "CONFIRM_PUBLISH_WITH_TITLE": "<strong>\"{{title}}\"</strong> тестін жариялауға сенімдісіз бе? Жарияланғаннан кейін тест құрамын өңдей алмайсыз.",
+    "CONFIRM_DELETE": "Бұл тестті жойғыңыз келе ме? Бұл әрекетті қайтаруға болмайды."
   },
   "TEST_COMPOSITION": {
     "TITLE": "Тест құрылымы",
