--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -14,6 +14,12 @@
     "CREATING": "Создание...",
     "LOADING": "Загрузка..."
   },
+  "CONFIRM": {
+    "DELETE_TITLE": "Подтверждение удаления",
+    "DELETE_CONFIRM": "Удалить",
+    "PUBLISH_TITLE": "Подтверждение публикации",
+    "PUBLISH_CONFIRM": "Опубликовать"
+  },
   "NAV": {
     "DASHBOARD": "Главная",
     "USERS": "Пользователи",
@@ -32,6 +38,35 @@
     "START_TEST": "Начать тест",
     "NO_TESTS": "Нет доступных тестов",
     "NO_TESTS_DESCRIPTION": "В данный момент нет опубликованных тестов для прохождения"
+  },
+  "ANALYTICS": {
+    "STUDENT_TITLE": "Моя аналитика",
+    "STUDENT_SUBTITLE": "Отслеживайте прогресс и находите зоны для улучшения",
+    "LAST_TEST_TITLE": "Результаты тестов",
+    "LAST_TEST_LOADING": "Загрузка результатов...",
+    "LAST_TEST_EMPTY": "Пока нет оцененных тестов",
+    "LAST_TEST_EMPTY_HINT": "Пройдите тест и дождитесь оценки",
+    "SUBJECT_NAME_LABEL": "Предмет:",
+    "TEST_NAME_LABEL": "Название теста:",
+    "STRONG_AREAS": "Сильные темы",
+    "WEAK_AREAS": "Зоны для улучшения",
+    "VIEW_DETAILS": "Смотреть подробный анализ",
+    "TOPICS_TITLE": "Результаты по темам",
+    "TOPICS_LOADING": "Загрузка тем...",
+    "TOPICS_EMPTY": "Нет данных по темам",
+    "TOPICS_AXIS": "Темы",
+    "PERCENTAGE_AXIS": "Процент (%)",
+    "TOPICS_HINT": "Нажмите на столбец, чтобы увидеть детализацию вопросов",
+    "ATTEMPT_TITLE": "Анализ теста",
+    "ATTEMPT_SUBTITLE": "Подробная разбивка вашей успеваемости по темам",
+    "DRILLDOWN_LOADING": "Загрузка деталей вопросов...",
+    "DRILLDOWN_TITLE": "Разбор вопросов",
+    "DRILLDOWN_EMPTY": "По этой теме нет вопросов",
+    "DRILLDOWN_QUESTION_NUMBER": "Вопрос {{index}}",
+    "DRILLDOWN_QUESTION_LABEL": "Вопрос",
+    "DRILLDOWN_YOUR_ANSWER": "Ваш ответ",
+    "DRILLDOWN_CORRECT_ANSWER": "Правильный ответ",
+    "DRILLDOWN_EXPLANATION": "Объяснение"
   },
   "AUTH": {
     "LOGIN": "Войти",
@@ -190,12 +225,17 @@
     "FIELD_DESC_LABEL": "Описание (необязательно)",
     "FIELD_DESC_PLACEHOLDER": "Введите описание теста",
     "FIELD_DESC_ERROR_MAX": "Описание должно быть короче 1000 символов",
+    "FIELD_CLASS_LEVEL_LABEL": "Уровень класса",
+    "FIELD_CLASS_LEVEL_SUFFIX": "класс",
+    "FIELD_CLASS_LEVEL_LOADING": "Загрузка уровней...",
+    "FIELD_CLASS_LEVEL_HINT": "Шаг 1: выберите уровень класса (это фильтрует предметы и классы)",
+    "FIELD_CLASS_LEVEL_REQUIRED": "Уровень класса обязателен",
     "FIELD_SUBJECT_LABEL": "Предмет",
     "FIELD_SUBJECT_LOADING": "Загрузка предметов...",
-    "FIELD_SUBJECT_HINT_NEW": "Шаг 1: выберите предмет для теста",
+    "FIELD_SUBJECT_HINT_NEW": "Шаг 2: выберите предмет для теста",
     "FIELD_SUBJECT_REQUIRED": "Предмет обязателен",
     "FIELD_SCHOOL_CLASSES_LABEL": "Классы",
-    "FIELD_SCHOOL_CLASSES_HINT": "Шаг 2: выберите один или несколько классов (например, 9А, 9Б, 9В)",
+    "FIELD_SCHOOL_CLASSES_HINT": "Шаг 3: выберите один или несколько классов (например, 9А, 9Б, 9В)",
     "FIELD_SCHOOL_CLASSES_REQUIRED": "Необходимо выбрать хотя бы один класс",
     "FIELD_SCHOOL_CLASSES_LOADING": "Загрузка классов...",
     "FIELD_DURATION_LABEL": "Длительность (мин)",
@@ -247,6 +287,7 @@
     "TOOLTIP_PUBLISH": "Опубликовать тест (после публикации редактирование недоступно)",
     "TOOLTIP_DELETE": "Удалить тест",
     "TOOLTIP_DELETE_DISABLED": "Нельзя удалить — есть попытки",
+    "NOTIFY_CLASS_LEVELS_FAIL": "Не удалось загрузить уровни классов",
     "NOTIFY_SCHOOL_CLASSES_FAIL": "Не удалось загрузить классы",
     "NOTIFY_SUBJECTS_FAIL": "Не удалось загрузить предметы",
     "NOTIFY_TEST_LOAD_FAIL": "Не удалось загрузить тест",
@@ -256,9 +297,9 @@
     "NOTIFY_PUBLISH_SUCCESS": "Тест успешно опубликован",
     "NOTIFY_DELETE_SUCCESS": "Тест удален",
     "NOTIFY_DELETE_BLOCK": "Нельзя удалить тест с попытками",
-    "CONFIRM_PUBLISH": "Опубликовать тест? Это действие необратимо: изменить состав после публикации нельзя.",
-    "CONFIRM_PUBLISH_WITH_TITLE": "Опубликовать тест \"{{title}}\"? Это действие необратимо: изменить состав после публикации нельзя.",
-    "CONFIRM_DELETE": "Удалить тест? Это действие нельзя отменить."
+    "CONFIRM_PUBLISH": "Опубликовать тест? После публикации изменить состав теста будет невозможно.",
+    "CONFIRM_PUBLISH_WITH_TITLE": "Вы уверены, что хотите опубликовать тест <strong>\"{{title}}\"</strong>? После публикации изменить состав теста будет невозможно.",
+    "CONFIRM_DELETE": "Вы уверены, что хотите удалить этот тест? Это действие нельзя отменить."
   },
   "TEST_COMPOSITION": {
     "TITLE": "Структура теста",
