--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -14,6 +14,12 @@
     "CREATING": "Creating...",
     "LOADING": "Loading..."
   },
+  "CONFIRM": {
+    "DELETE_TITLE": "Confirm Deletion",
+    "DELETE_CONFIRM": "Delete",
+    "PUBLISH_TITLE": "Confirm Publishing",
+    "PUBLISH_CONFIRM": "Publish"
+  },
   "NAV": {
     "DASHBOARD": "Dashboard",
     "USERS": "Users",
@@ -32,6 +38,35 @@
     "START_TEST": "Start Test",
     "NO_TESTS": "No available tests",
     "NO_TESTS_DESCRIPTION": "There are currently no published tests available"
+  },
+  "ANALYTICS": {
+    "STUDENT_TITLE": "My Analytics",
+    "STUDENT_SUBTITLE": "Track your performance and identify areas for improvement",
+    "LAST_TEST_TITLE": "Test Results",
+    "LAST_TEST_LOADING": "Loading your results...",
+    "LAST_TEST_EMPTY": "No graded tests yet",
+    "LAST_TEST_EMPTY_HINT": "Complete a test and wait for it to be graded",
+    "SUBJECT_NAME_LABEL": "Subject:",
+    "TEST_NAME_LABEL": "Test name:",
+    "STRONG_AREAS": "Strong Areas",
+    "WEAK_AREAS": "Areas for Improvement",
+    "VIEW_DETAILS": "View Detailed Analysis",
+    "TOPICS_TITLE": "Performance by Topic",
+    "TOPICS_LOADING": "Loading topics...",
+    "TOPICS_EMPTY": "No topic data available",
+    "TOPICS_AXIS": "Topics",
+    "PERCENTAGE_AXIS": "Percentage (%)",
+    "TOPICS_HINT": "Click on any bar to see detailed question breakdown",
+    "ATTEMPT_TITLE": "Test Analysis",
+    "ATTEMPT_SUBTITLE": "Detailed breakdown of your performance by topic",
+    "DRILLDOWN_LOADING": "Loading question details...",
+    "DRILLDOWN_TITLE": "Questions Breakdown",
+    "DRILLDOWN_EMPTY": "No questions found for this topic",
+    "DRILLDOWN_QUESTION_NUMBER": "Question {{index}}",
+    "DRILLDOWN_QUESTION_LABEL": "Question",
+    "DRILLDOWN_YOUR_ANSWER": "Your Answer",
+    "DRILLDOWN_CORRECT_ANSWER": "Correct Answer",
+    "DRILLDOWN_EXPLANATION": "Explanation"
   },
   "AUTH": {
     "LOGIN": "Login",
@@ -190,12 +225,17 @@
     "FIELD_DESC_LABEL": "Description (Optional)",
     "FIELD_DESC_PLACEHOLDER": "Enter test description",
     "FIELD_DESC_ERROR_MAX": "Description must be less than 1000 characters",
+    "FIELD_CLASS_LEVEL_LABEL": "Class Level",
+    "FIELD_CLASS_LEVEL_SUFFIX": "grade",
+    "FIELD_CLASS_LEVEL_LOADING": "Loading levels...",
+    "FIELD_CLASS_LEVEL_HINT": "Step 1: select class level (this filters subjects and classes)",
+    "FIELD_CLASS_LEVEL_REQUIRED": "Class level is required",
     "FIELD_SUBJECT_LABEL": "Subject",
     "FIELD_SUBJECT_LOADING": "Loading subjects...",
-    "FIELD_SUBJECT_HINT_NEW": "Step 1: select subject for the test",
+    "FIELD_SUBJECT_HINT_NEW": "Step 2: select subject for the test",
     "FIELD_SUBJECT_REQUIRED": "Subject is required",
     "FIELD_SCHOOL_CLASSES_LABEL": "Classes",
-    "FIELD_SCHOOL_CLASSES_HINT": "Step 2: select one or more classes (e.g., 9A, 9B, 9C)",
+    "FIELD_SCHOOL_CLASSES_HINT": "Step 3: select one or more classes (e.g., 9A, 9B, 9C)",
     "FIELD_SCHOOL_CLASSES_REQUIRED": "At least one class must be selected",
     "FIELD_SCHOOL_CLASSES_LOADING": "Loading classes...",
     "FIELD_DURATION_LABEL": "Duration (minutes)",
@@ -247,6 +287,7 @@
     "TOOLTIP_PUBLISH": "Publish test (cannot be edited after publishing)",
     "TOOLTIP_DELETE": "Delete test",
     "TOOLTIP_DELETE_DISABLED": "Cannot delete - test has student attempts",
+    "NOTIFY_CLASS_LEVELS_FAIL": "Failed to load class levels",
     "NOTIFY_SCHOOL_CLASSES_FAIL": "Failed to load classes",
     "NOTIFY_SUBJECTS_FAIL": "Failed to load subjects",
     "NOTIFY_TEST_LOAD_FAIL": "Failed to load test",
@@ -257,7 +298,7 @@
     "NOTIFY_DELETE_SUCCESS": "Test deleted successfully",
     "NOTIFY_DELETE_BLOCK": "Cannot delete test with student attempts",
     "CONFIRM_PUBLISH": "Publish this test? This action is final and the composition cannot be edited later.",
-    "CONFIRM_PUBLISH_WITH_TITLE": "Publish the test \"{{title}}\"? This action is final and the composition cannot be edited later.",
+    "CONFIRM_PUBLISH_WITH_TITLE": "Are you sure you want to publish the test <strong>\"{{title}}\"</strong>? This action is final and the composition cannot be edited later.",
     "CONFIRM_DELETE": "Are you sure you want to delete this test? This action cannot be undone."
   },
   "TEST_COMPOSITION": {
