--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -66,7 +66,12 @@
     "DRILLDOWN_QUESTION_LABEL": "Question",
     "DRILLDOWN_YOUR_ANSWER": "Your Answer",
     "DRILLDOWN_CORRECT_ANSWER": "Correct Answer",
-    "DRILLDOWN_EXPLANATION": "Explanation"
+    "DRILLDOWN_EXPLANATION": "Explanation",
+    "AI_TITLE": "AI Coach — Weak Topics Plan",
+    "AI_PLAN_BUTTON": "Generate plan",
+    "AI_TOPIC_HELP_TITLE": "Topic mistake breakdown",
+    "AI_LIMIT_REACHED": "Daily limit reached",
+    "AI_CACHED_HINT": "from cache"
   },
   "AUTH": {
     "LOGIN": "Login",
