комит 12 - расписание и ИИ помощник

--- a/src/assets/i18n/kk.json
+++ b/src/assets/i18n/kk.json
@@ -1,6 +1,7 @@
 {
   "COMMON": {
     "ACTIONS": "Әрекеттер",
+    "BACK": "Артқа",
     "CANCEL": "Болдырмау",
     "SAVE": "Сақтау",
     "CREATE": "Жасау",
@@ -30,7 +31,8 @@
     "TESTING": "Тестілеу",
     "TIMETABLE": "Сабақ кестесі",
     "ATTENDANCE": "Қатысу",
-    "TESTS": "Тесттер"
+    "TESTS": "Тесттер",
+    "CURRICULUM": "Оқу жоспары"
   },
   "TESTING": {
     "TITLE": "Тестілеу",
@@ -71,7 +73,30 @@
     "AI_PLAN_BUTTON": "Жоспар құру",
     "AI_TOPIC_HELP_TITLE": "Тақырып бойынша қателер талдауы",
     "AI_LIMIT_REACHED": "Бүгінгі лимит таусылды",
-    "AI_CACHED_HINT": "кэштен"
+    "AI_CACHED_HINT": "кэштен",
+    "AI_SERVER_ERROR": "AI көмегін алу мүмкін болмады",
+    "AI_WEAK_TOPICS_TITLE": "Әлсіз тақырыптар",
+    "AI_WEEKLY_PLAN_TITLE": "Апталық жоспар",
+    "AI_RULES_TITLE": "Ережелер",
+    "AI_SELF_CHECK_TITLE": "Өз-өзіңді тексеру",
+    "AI_TOPIC_COLUMN": "Тақырып",
+    "AI_ACCURACY_COLUMN": "Дәлдік",
+    "AI_MISTAKE_COLUMN": "Негізгі қате",
+    "AI_DAY_LABEL": "{{day}}-күн",
+    "AI_MINUTES_SHORT": "мин",
+    "AI_TOPIC_HELP_COACH": "Түсіндір",
+    "AI_TOPIC_HELP_SHORT": "Қысқа",
+    "AI_TOPIC_HELP_PRACTICE": "Тренажер бер",
+    "AI_MAIN_ERROR_TITLE": "Негізгі қате",
+    "AI_EXPLANATION_TITLE": "Түсіндірме",
+    "AI_EXAMPLES_TITLE": "Мысалдар",
+    "AI_EXAMPLE_QUESTION": "Сұрақ",
+    "AI_EXAMPLE_SOLUTION": "Шешім",
+    "AI_PRACTICE_TITLE": "Тренажер",
+    "AI_PRACTICE_QUESTION": "Сұрақ",
+    "AI_PRACTICE_ANSWER": "Жауап",
+    "AI_SHOW_ANSWER": "Жауапты көрсету",
+    "AI_HIDE_ANSWER": "Жауапты жасыру"
   },
   "AUTH": {
     "LOGIN": "Кіру",
@@ -305,6 +330,76 @@
     "CONFIRM_PUBLISH": "Тестті жариялайсыз ба? Жарияланғаннан кейін тест құрамын өңдей алмайсыз.",
     "CONFIRM_PUBLISH_WITH_TITLE": "<strong>\"{{title}}\"</strong> тестін жариялауға сенімдісіз бе? Жарияланғаннан кейін тест құрамын өңдей алмайсыз.",
     "CONFIRM_DELETE": "Бұл тестті жойғыңыз келе ме? Бұл әрекетті қайтаруға болмайды."
+  },
+  "ADMIN": {
+    "CURRICULUM": {
+      "TITLE": "Оқу жоспары",
+      "SUBTITLE": "Әр сынып деңгейі үшін пәндер бойынша сағаттарды басқару",
+      "LEVELS_TITLE": "Сынып деңгейлері",
+      "SUBJECTS_TITLE": "Пәндер",
+      "SUBJECT": "Пән",
+      "HOURS_PER_WEEK": "сағ/апта",
+      "HOURS": "Сағат",
+      "TOTAL_HOURS": "Жалпы сағат",
+      "MAX_LESSONS_DAY": "Макс. сабақ/күн",
+      "OVER_LIMIT": "Апталық сағат лимиті асып кетті",
+      "NO_SUBJECTS": "Бұл деңгей үшін пәндер табылмады",
+      "SELECT_LEVEL": "Сол жақтан сынып деңгейін таңдаңыз",
+      "CHANGED": "Өзгертілді",
+      "LOAD_LEVELS_ERROR": "Сынып деңгейлерін жүктеу сәтсіз",
+      "LOAD_SUBJECTS_ERROR": "Пәндерді жүктеу сәтсіз",
+      "SAVE_SUCCESS": "Оқу жоспары сақталды",
+      "SAVE_ERROR": "Оқу жоспарын сақтау сәтсіз",
+      "SETTINGS_SAVED": "Деңгей параметрлері сақталды",
+      "SETTINGS_ERROR": "Параметрлерді сақтау сәтсіз"
+    },
+    "ASSIGNMENTS": {
+      "TITLE": "Мұғалім тағайындаулары",
+      "SUBTITLE": "Осы сыныпқа пәндер бойынша мұғалімдерді тағайындаңыз",
+      "SUBJECT": "Пән",
+      "TEACHER": "Мұғалім",
+      "UNASSIGNED": "тағайындалмаған",
+      "SEARCH_TEACHER": "Мұғалімді іздеу...",
+      "CLEAR_TEACHER": "Мұғалімді алып тастау",
+      "CHANGED": "Өзгертілді",
+      "NO_SUBJECTS": "Тағайындауға пәндер жоқ",
+      "GO_TO_SCHEDULE": "Кестеге өту",
+      "LOAD_ERROR": "Тағайындауларды жүктеу сәтсіз",
+      "SAVE_SUCCESS": "Тағайындаулар сақталды",
+      "SAVE_ERROR": "Тағайындауларды сақтау сәтсіз"
+    },
+    "SCHEDULE": {
+      "TITLE": "Сабақ кестесі",
+      "SUBTITLE": "Сынып үшін сабақ кестесін құрыңыз",
+      "LESSON": "Сабақ",
+      "MON": "Дс",
+      "TUE": "Сс",
+      "WED": "Ср",
+      "THU": "Бс",
+      "FRI": "Жм",
+      "SAT": "Сн",
+      "EMPTY": "Бос",
+      "STATUS_DRAFT": "Жоба",
+      "STATUS_ACTIVE": "Белсенді",
+      "CONFLICTS": "Қақтығыстар",
+      "TEACHER_BUSY": "Мұғалім бос емес",
+      "MAX_LESSONS_EXCEEDED": "Сабақ лимиті асып кетті",
+      "HOURS_MISMATCH": "Сағат сәйкессіздігі",
+      "COPY_DAY": "Күнді көшіру",
+      "CLEAR_DAY": "Күнді тазалау",
+      "CLEAR_LESSON": "Сабақты тазалау",
+      "DAY_COPIED": "Күн көшірілді",
+      "ACTIVATE": "Белсендіру",
+      "SAVE_FIRST": "Алдымен өзгерістерді сақтаңыз",
+      "ACTIVATE_WITH_CONFLICTS_TITLE": "Қақтығыстармен белсендіру керек пе?",
+      "ACTIVATE_WITH_CONFLICTS_MESSAGE": "Кестеде маңызды қақтығыстар бар. Белсендіруге сенімдісіз бе?",
+      "ACTIVATE_ANYWAY": "Белсендіру",
+      "LOAD_ERROR": "Кестені жүктеу сәтсіз",
+      "SAVE_SUCCESS": "Кесте сақталды",
+      "SAVE_ERROR": "Кестені сақтау сәтсіз",
+      "ACTIVATE_SUCCESS": "Кесте белсендірілді",
+      "ACTIVATE_ERROR": "Кестені белсендіру сәтсіз"
+    }
   },
   "TEST_COMPOSITION": {
     "TITLE": "Тест құрылымы",
