--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -1,6 +1,7 @@
 {
   "COMMON": {
     "ACTIONS": "Действия",
+    "BACK": "Назад",
     "CANCEL": "Отмена",
     "SAVE": "Сохранить",
     "CREATE": "Создать",
@@ -30,7 +31,8 @@
     "TESTING": "Тестирование",
     "TIMETABLE": "Расписание",
     "ATTENDANCE": "Посещаемость",
-    "TESTS": "Тесты"
+    "TESTS": "Тесты",
+    "CURRICULUM": "Учебный план"
   },
   "TESTING": {
     "TITLE": "Тестирование",
@@ -71,7 +73,30 @@
     "AI_PLAN_BUTTON": "Сгенерировать план",
     "AI_TOPIC_HELP_TITLE": "Разбор ошибок по теме",
     "AI_LIMIT_REACHED": "Лимит на сегодня исчерпан",
-    "AI_CACHED_HINT": "из кеша"
+    "AI_CACHED_HINT": "из кеша",
+    "AI_SERVER_ERROR": "Не удалось получить помощь от ИИ",
+    "AI_WEAK_TOPICS_TITLE": "Слабые темы",
+    "AI_WEEKLY_PLAN_TITLE": "План на неделю",
+    "AI_RULES_TITLE": "Правила",
+    "AI_SELF_CHECK_TITLE": "Самопроверка",
+    "AI_TOPIC_COLUMN": "Тема",
+    "AI_ACCURACY_COLUMN": "Точность",
+    "AI_MISTAKE_COLUMN": "Главная ошибка",
+    "AI_DAY_LABEL": "День {{day}}",
+    "AI_MINUTES_SHORT": "мин",
+    "AI_TOPIC_HELP_COACH": "Объясни",
+    "AI_TOPIC_HELP_SHORT": "Коротко",
+    "AI_TOPIC_HELP_PRACTICE": "Дай тренажёр",
+    "AI_MAIN_ERROR_TITLE": "Главная ошибка",
+    "AI_EXPLANATION_TITLE": "Объяснение",
+    "AI_EXAMPLES_TITLE": "Примеры",
+    "AI_EXAMPLE_QUESTION": "Вопрос",
+    "AI_EXAMPLE_SOLUTION": "Решение",
+    "AI_PRACTICE_TITLE": "Тренажёр",
+    "AI_PRACTICE_QUESTION": "Вопрос",
+    "AI_PRACTICE_ANSWER": "Ответ",
+    "AI_SHOW_ANSWER": "Показать ответ",
+    "AI_HIDE_ANSWER": "Скрыть ответ"
   },
   "AUTH": {
     "LOGIN": "Войти",
@@ -305,6 +330,76 @@
     "CONFIRM_PUBLISH": "Опубликовать тест? После публикации изменить состав теста будет невозможно.",
     "CONFIRM_PUBLISH_WITH_TITLE": "Вы уверены, что хотите опубликовать тест <strong>\"{{title}}\"</strong>? После публикации изменить состав теста будет невозможно.",
     "CONFIRM_DELETE": "Вы уверены, что хотите удалить этот тест? Это действие нельзя отменить."
+  },
+  "ADMIN": {
+    "CURRICULUM": {
+      "TITLE": "Учебный план",
+      "SUBTITLE": "Управление часами по предметам для каждого уровня класса",
+      "LEVELS_TITLE": "Уровни классов",
+      "SUBJECTS_TITLE": "Предметы",
+      "SUBJECT": "Предмет",
+      "HOURS_PER_WEEK": "часов/нед",
+      "HOURS": "Часов",
+      "TOTAL_HOURS": "Всего часов",
+      "MAX_LESSONS_DAY": "Макс. уроков/день",
+      "OVER_LIMIT": "Превышен лимит часов в неделю",
+      "NO_SUBJECTS": "Предметы не найдены для этого уровня",
+      "SELECT_LEVEL": "Выберите уровень класса слева",
+      "CHANGED": "Изменено",
+      "LOAD_LEVELS_ERROR": "Не удалось загрузить уровни классов",
+      "LOAD_SUBJECTS_ERROR": "Не удалось загрузить предметы",
+      "SAVE_SUCCESS": "Учебный план сохранен",
+      "SAVE_ERROR": "Не удалось сохранить учебный план",
+      "SETTINGS_SAVED": "Настройки уровня сохранены",
+      "SETTINGS_ERROR": "Не удалось сохранить настройки"
+    },
+    "ASSIGNMENTS": {
+      "TITLE": "Назначения учителей",
+      "SUBTITLE": "Назначьте учителей на предметы для этого класса",
+      "SUBJECT": "Предмет",
+      "TEACHER": "Учитель",
+      "UNASSIGNED": "не назначено",
+      "SEARCH_TEACHER": "Поиск учителя...",
+      "CLEAR_TEACHER": "Убрать учителя",
+      "CHANGED": "Изменено",
+      "NO_SUBJECTS": "Нет предметов для назначения",
+      "GO_TO_SCHEDULE": "К расписанию",
+      "LOAD_ERROR": "Не удалось загрузить назначения",
+      "SAVE_SUCCESS": "Назначения сохранены",
+      "SAVE_ERROR": "Не удалось сохранить назначения"
+    },
+    "SCHEDULE": {
+      "TITLE": "Расписание",
+      "SUBTITLE": "Составьте расписание уроков для класса",
+      "LESSON": "Урок",
+      "MON": "Пн",
+      "TUE": "Вт",
+      "WED": "Ср",
+      "THU": "Чт",
+      "FRI": "Пт",
+      "SAT": "Сб",
+      "EMPTY": "Пусто",
+      "STATUS_DRAFT": "Черновик",
+      "STATUS_ACTIVE": "Активно",
+      "CONFLICTS": "Конфликты",
+      "TEACHER_BUSY": "Учитель занят",
+      "MAX_LESSONS_EXCEEDED": "Превышен лимит уроков",
+      "HOURS_MISMATCH": "Несоответствие часов",
+      "COPY_DAY": "Копировать день",
+      "CLEAR_DAY": "Очистить день",
+      "CLEAR_LESSON": "Очистить урок",
+      "DAY_COPIED": "День скопирован",
+      "ACTIVATE": "Активировать",
+      "SAVE_FIRST": "Сначала сохраните изменения",
+      "ACTIVATE_WITH_CONFLICTS_TITLE": "Активировать с конфликтами?",
+      "ACTIVATE_WITH_CONFLICTS_MESSAGE": "Расписание содержит критические конфликты. Вы уверены, что хотите активировать?",
+      "ACTIVATE_ANYWAY": "Активировать",
+      "LOAD_ERROR": "Не удалось загрузить расписание",
+      "SAVE_SUCCESS": "Расписание сохранено",
+      "SAVE_ERROR": "Не удалось сохранить расписание",
+      "ACTIVATE_SUCCESS": "Расписание активировано",
+      "ACTIVATE_ERROR": "Не удалось активировать расписание"
+    }
   },
   "TEST_COMPOSITION": {
     "TITLE": "Структура теста",
