--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,6 +1,7 @@
 {
   "COMMON": {
     "ACTIONS": "Actions",
+    "BACK": "Back",
     "CANCEL": "Cancel",
     "SAVE": "Save",
     "CREATE": "Create",
@@ -30,7 +31,8 @@
     "TESTING": "Testing",
     "TIMETABLE": "Timetable",
     "ATTENDANCE": "Attendance",
-    "TESTS": "Tests"
+    "TESTS": "Tests",
+    "CURRICULUM": "Curriculum"
   },
   "TESTING": {
     "TITLE": "Testing",
@@ -71,7 +73,30 @@
     "AI_PLAN_BUTTON": "Generate plan",
     "AI_TOPIC_HELP_TITLE": "Topic mistake breakdown",
     "AI_LIMIT_REACHED": "Daily limit reached",
-    "AI_CACHED_HINT": "from cache"
+    "AI_CACHED_HINT": "from cache",
+    "AI_SERVER_ERROR": "Unable to get help from AI",
+    "AI_WEAK_TOPICS_TITLE": "Weak topics",
+    "AI_WEEKLY_PLAN_TITLE": "Weekly plan",
+    "AI_RULES_TITLE": "Rules",
+    "AI_SELF_CHECK_TITLE": "Self check",
+    "AI_TOPIC_COLUMN": "Topic",
+    "AI_ACCURACY_COLUMN": "Accuracy",
+    "AI_MISTAKE_COLUMN": "Main mistake",
+    "AI_DAY_LABEL": "Day {{day}}",
+    "AI_MINUTES_SHORT": "min",
+    "AI_TOPIC_HELP_COACH": "Explain",
+    "AI_TOPIC_HELP_SHORT": "Short",
+    "AI_TOPIC_HELP_PRACTICE": "Practice",
+    "AI_MAIN_ERROR_TITLE": "Main error",
+    "AI_EXPLANATION_TITLE": "Explanation",
+    "AI_EXAMPLES_TITLE": "Examples",
+    "AI_EXAMPLE_QUESTION": "Question",
+    "AI_EXAMPLE_SOLUTION": "Solution",
+    "AI_PRACTICE_TITLE": "Practice",
+    "AI_PRACTICE_QUESTION": "Question",
+    "AI_PRACTICE_ANSWER": "Answer",
+    "AI_SHOW_ANSWER": "Show answer",
+    "AI_HIDE_ANSWER": "Hide answer"
   },
   "AUTH": {
     "LOGIN": "Login",
@@ -305,6 +330,76 @@
     "CONFIRM_PUBLISH": "Publish this test? This action is final and the composition cannot be edited later.",
     "CONFIRM_PUBLISH_WITH_TITLE": "Are you sure you want to publish the test <strong>\"{{title}}\"</strong>? This action is final and the composition cannot be edited later.",
     "CONFIRM_DELETE": "Are you sure you want to delete this test? This action cannot be undone."
+  },
+  "ADMIN": {
+    "CURRICULUM": {
+      "TITLE": "Curriculum",
+      "SUBTITLE": "Manage hours per subject for each class level",
+      "LEVELS_TITLE": "Class Levels",
+      "SUBJECTS_TITLE": "Subjects",
+      "SUBJECT": "Subject",
+      "HOURS_PER_WEEK": "hrs/week",
+      "HOURS": "Hours",
+      "TOTAL_HOURS": "Total hours",
+      "MAX_LESSONS_DAY": "Max lessons/day",
+      "OVER_LIMIT": "Weekly hours limit exceeded",
+      "NO_SUBJECTS": "No subjects found for this level",
+      "SELECT_LEVEL": "Select a class level from the left",
+      "CHANGED": "Changed",
+      "LOAD_LEVELS_ERROR": "Failed to load class levels",
+      "LOAD_SUBJECTS_ERROR": "Failed to load subjects",
+      "SAVE_SUCCESS": "Curriculum saved",
+      "SAVE_ERROR": "Failed to save curriculum",
+      "SETTINGS_SAVED": "Level settings saved",
+      "SETTINGS_ERROR": "Failed to save settings"
+    },
+    "ASSIGNMENTS": {
+      "TITLE": "Teacher Assignments",
+      "SUBTITLE": "Assign teachers to subjects for this class",
+      "SUBJECT": "Subject",
+      "TEACHER": "Teacher",
+      "UNASSIGNED": "unassigned",
+      "SEARCH_TEACHER": "Search teacher...",
+      "CLEAR_TEACHER": "Remove teacher",
+      "CHANGED": "Changed",
+      "NO_SUBJECTS": "No subjects to assign",
+      "GO_TO_SCHEDULE": "Go to Schedule",
+      "LOAD_ERROR": "Failed to load assignments",
+      "SAVE_SUCCESS": "Assignments saved",
+      "SAVE_ERROR": "Failed to save assignments"
+    },
+    "SCHEDULE": {
+      "TITLE": "Schedule",
+      "SUBTITLE": "Build the class timetable",
+      "LESSON": "Lesson",
+      "MON": "Mon",
+      "TUE": "Tue",
+      "WED": "Wed",
+      "THU": "Thu",
+      "FRI": "Fri",
+      "SAT": "Sat",
+      "EMPTY": "Empty",
+      "STATUS_DRAFT": "Draft",
+      "STATUS_ACTIVE": "Active",
+      "CONFLICTS": "Conflicts",
+      "TEACHER_BUSY": "Teacher busy",
+      "MAX_LESSONS_EXCEEDED": "Lessons limit exceeded",
+      "HOURS_MISMATCH": "Hours mismatch",
+      "COPY_DAY": "Copy day",
+      "CLEAR_DAY": "Clear day",
+      "CLEAR_LESSON": "Clear lesson",
+      "DAY_COPIED": "Day copied",
+      "ACTIVATE": "Activate",
+      "SAVE_FIRST": "Save changes first",
+      "ACTIVATE_WITH_CONFLICTS_TITLE": "Activate with conflicts?",
+      "ACTIVATE_WITH_CONFLICTS_MESSAGE": "The schedule has critical conflicts. Are you sure you want to activate?",
+      "ACTIVATE_ANYWAY": "Activate",
+      "LOAD_ERROR": "Failed to load schedule",
+      "SAVE_SUCCESS": "Schedule saved",
+      "SAVE_ERROR": "Failed to save schedule",
+      "ACTIVATE_SUCCESS": "Schedule activated",
+      "ACTIVATE_ERROR": "Failed to activate schedule"
+    }
   },
   "TEST_COMPOSITION": {
     "TITLE": "Test Structure",
