--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -351,7 +351,8 @@
       "SAVE_SUCCESS": "Учебный план сохранен",
       "SAVE_ERROR": "Не удалось сохранить учебный план",
       "SETTINGS_SAVED": "Настройки уровня сохранены",
-      "SETTINGS_ERROR": "Не удалось сохранить настройки"
+      "SETTINGS_ERROR": "Не удалось сохранить настройки",
+      "DAYS_PER_WEEK": "Дней в неделю"
     },
     "ASSIGNMENTS": {
       "TITLE": "Назначения учителей",
