--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -351,7 +351,8 @@
       "SAVE_SUCCESS": "Curriculum saved",
       "SAVE_ERROR": "Failed to save curriculum",
       "SETTINGS_SAVED": "Level settings saved",
-      "SETTINGS_ERROR": "Failed to save settings"
+      "SETTINGS_ERROR": "Failed to save settings",
+      "DAYS_PER_WEEK": "Days per week"
     },
     "ASSIGNMENTS": {
       "TITLE": "Teacher Assignments",
