--- a/src/assets/i18n/kk.json
+++ b/src/assets/i18n/kk.json
@@ -351,7 +351,8 @@
       "SAVE_SUCCESS": "Оқу жоспары сақталды",
       "SAVE_ERROR": "Оқу жоспарын сақтау сәтсіз",
       "SETTINGS_SAVED": "Деңгей параметрлері сақталды",
-      "SETTINGS_ERROR": "Параметрлерді сақтау сәтсіз"
+      "SETTINGS_ERROR": "Параметрлерді сақтау сәтсіз",
+      "DAYS_PER_WEEK": "Аптасына күн"
     },
     "ASSIGNMENTS": {
       "TITLE": "Мұғалім тағайындаулары",
