--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -384,6 +384,8 @@
       "STATUS_ACTIVE": "Active",
       "CONFLICTS": "Conflicts",
       "TEACHER_BUSY": "Teacher busy",
+      "PLAN_EXCEEDS_SLOTS": "Plan does not fit in week",
+      "INVALID_SLOT_RANGE": "Invalid slot range",
       "MAX_LESSONS_EXCEEDED": "Lessons limit exceeded",
       "HOURS_MISMATCH": "Hours mismatch",
       "COPY_DAY": "Copy day",
@@ -392,9 +394,8 @@
       "DAY_COPIED": "Day copied",
       "ACTIVATE": "Activate",
       "SAVE_FIRST": "Save changes first",
-      "ACTIVATE_WITH_CONFLICTS_TITLE": "Activate with conflicts?",
-      "ACTIVATE_WITH_CONFLICTS_MESSAGE": "The schedule has critical conflicts. Are you sure you want to activate?",
-      "ACTIVATE_ANYWAY": "Activate",
+      "ACTIVATION_BLOCKED": "Activation blocked due to critical conflicts",
+      "ACTIVATION_BLOCKED_TOOLTIP": "Fix critical conflicts to activate",
       "LOAD_ERROR": "Failed to load schedule",
       "SAVE_SUCCESS": "Schedule saved",
       "SAVE_ERROR": "Failed to save schedule",
