--- a/src/assets/i18n/kk.json
+++ b/src/assets/i18n/kk.json
@@ -384,6 +384,8 @@
       "STATUS_ACTIVE": "Белсенді",
       "CONFLICTS": "Қақтығыстар",
       "TEACHER_BUSY": "Мұғалім бос емес",
+      "PLAN_EXCEEDS_SLOTS": "Жоспар аптаға сыймайды",
+      "INVALID_SLOT_RANGE": "Жарамсыз слот диапазоны",
       "MAX_LESSONS_EXCEEDED": "Сабақ лимиті асып кетті",
       "HOURS_MISMATCH": "Сағат сәйкессіздігі",
       "COPY_DAY": "Күнді көшіру",
@@ -392,9 +394,8 @@
       "DAY_COPIED": "Күн көшірілді",
       "ACTIVATE": "Белсендіру",
       "SAVE_FIRST": "Алдымен өзгерістерді сақтаңыз",
-      "ACTIVATE_WITH_CONFLICTS_TITLE": "Қақтығыстармен белсендіру керек пе?",
-      "ACTIVATE_WITH_CONFLICTS_MESSAGE": "Кестеде маңызды қақтығыстар бар. Белсендіруге сенімдісіз бе?",
-      "ACTIVATE_ANYWAY": "Белсендіру",
+      "ACTIVATION_BLOCKED": "Маңызды қақтығыстарға байланысты белсендіру бұғатталған",
+      "ACTIVATION_BLOCKED_TOOLTIP": "Белсендіру үшін маңызды қақтығыстарды түзетіңіз",
       "LOAD_ERROR": "Кестені жүктеу сәтсіз",
       "SAVE_SUCCESS": "Кесте сақталды",
       "SAVE_ERROR": "Кестені сақтау сәтсіз",
