--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -384,6 +384,8 @@
       "STATUS_ACTIVE": "Активно",
       "CONFLICTS": "Конфликты",
       "TEACHER_BUSY": "Учитель занят",
+      "PLAN_EXCEEDS_SLOTS": "План не помещается в неделю",
+      "INVALID_SLOT_RANGE": "Недопустимый диапазон слотов",
       "MAX_LESSONS_EXCEEDED": "Превышен лимит уроков",
       "HOURS_MISMATCH": "Несоответствие часов",
       "COPY_DAY": "Копировать день",
@@ -392,9 +394,8 @@
       "DAY_COPIED": "День скопирован",
       "ACTIVATE": "Активировать",
       "SAVE_FIRST": "Сначала сохраните изменения",
-      "ACTIVATE_WITH_CONFLICTS_TITLE": "Активировать с конфликтами?",
-      "ACTIVATE_WITH_CONFLICTS_MESSAGE": "Расписание содержит критические конфликты. Вы уверены, что хотите активировать?",
-      "ACTIVATE_ANYWAY": "Активировать",
+      "ACTIVATION_BLOCKED": "Активация заблокирована из-за критических конфликтов",
+      "ACTIVATION_BLOCKED_TOOLTIP": "Исправьте критические конфликты для активации",
       "LOAD_ERROR": "Не удалось загрузить расписание",
       "SAVE_SUCCESS": "Расписание сохранено",
       "SAVE_ERROR": "Не удалось сохранить расписание",
