--- a/src/assets/i18n/kk.json
+++ b/src/assets/i18n/kk.json
@@ -41,6 +41,25 @@
     "NO_TESTS": "Қолжетімді тесттер жоқ",
     "NO_TESTS_DESCRIPTION": "Қазір өту үшін жарияланған тесттер жоқ"
   },
+  "ATTENDANCE": {
+    "TITLE": "Қатысу",
+    "SUBTITLE": "Сабақтарға оқушылардың қатысуын белгілеңіз",
+    "CLASS": "Сынып",
+    "DATE": "Күн",
+    "LESSON": "Сабақ",
+    "MARKED": "Белгіленген",
+    "NOT_MARKED": "Белгіленбеген",
+    "NO_LESSONS": "Таңдалған күнге сабақтар жоқ",
+    "NO_STUDENTS": "Сыныпта оқушылар жоқ",
+    "SELECT_ALL": "Барлығын белгілеу (келді)",
+    "PRESENT_COUNT": "Келген",
+    "MARKED_BY": "Белгілеген",
+    "LOAD_CLASSES_ERROR": "Сыныптарды жүктеу сәтсіз",
+    "LOAD_LESSONS_ERROR": "Сабақтарды жүктеу сәтсіз",
+    "LOAD_ERROR": "Деректерді жүктеу сәтсіз",
+    "SAVE_SUCCESS": "Қатысу сақталды",
+    "SAVE_ERROR": "Қатысуды сақтау сәтсіз"
+  },
   "ANALYTICS": {
     "STUDENT_TITLE": "Менің аналитикам",
     "STUDENT_SUBTITLE": "Нәтижелерді бақылап, жақсарту бағыттарын анықтаңыз",
