--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -41,6 +41,25 @@
     "NO_TESTS": "Нет доступных тестов",
     "NO_TESTS_DESCRIPTION": "В данный момент нет опубликованных тестов для прохождения"
   },
+  "ATTENDANCE": {
+    "TITLE": "Посещаемость",
+    "SUBTITLE": "Отметьте присутствие учеников на уроках",
+    "CLASS": "Класс",
+    "DATE": "Дата",
+    "LESSON": "Урок",
+    "MARKED": "Отмечено",
+    "NOT_MARKED": "Не отмечено",
+    "NO_LESSONS": "Нет уроков на выбранную дату",
+    "NO_STUDENTS": "Нет учеников в классе",
+    "SELECT_ALL": "Отметить всех (присутствуют)",
+    "PRESENT_COUNT": "Присутствует",
+    "MARKED_BY": "Отметил(а)",
+    "LOAD_CLASSES_ERROR": "Не удалось загрузить классы",
+    "LOAD_LESSONS_ERROR": "Не удалось загрузить уроки",
+    "LOAD_ERROR": "Не удалось загрузить данные",
+    "SAVE_SUCCESS": "Посещаемость сохранена",
+    "SAVE_ERROR": "Не удалось сохранить посещаемость"
+  },
   "ANALYTICS": {
     "STUDENT_TITLE": "Моя аналитика",
     "STUDENT_SUBTITLE": "Отслеживайте прогресс и находите зоны для улучшения",
